# cost-optimization-system

./: Makefile  ai_model_crawler.py  open_llm_scraper.py  pyproject.toml
api/: apiaggregation.py  sql_router.py
app/: main.py
app/db/models/: __init__.py  user.py
app/migrations/versions/: 38ecc7cdf47a_change_parameters_column_to_bigint.py
app/services/: savingdb.py
tests/: test_api.py  test_llms.py  test_opensource_llms.py
