[tool.poetry]
name = "cost-optimization"
version = "0.1.0"
description = ""
authors = ["tayssir.fattoumi <tayssir.fattoumi@mssolutions-group.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = ">=2.2.3,<3.0.0"
joblib = ">=1.4.2,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
crawl4ai = ">=0.5.0.post4,<0.6.0"
playwright = ">=1.51.0,<2.0.0"
alembic = ">=1.15.1,<2.0.0"
sqlalchemy = ">=2.0.39,<3.0.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
pymysql = "^1.1.1"
pydantic = "^2.11.3"
litellm = "^1.67.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ipykernel = "^6.29.5"
pylint = "^3.3.6"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
